apps/dssp-jtest-1/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dssp-jtest-1
  namespace: dev
  labels:
    app: dssp-jtest-1
    backstage.io/kubernetes-id: dssp-jtest-1
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dssp-jtest-1
  template:
    metadata:
      labels:
        app: dssp-jtest-1
        backstage.io/kubernetes-id: dssp-jtest-1
        environment: dev
    spec:
      containers:
        - name: dssp-jtest-1
          image: chaitanyapandeygspann/dssp-jtest-1:1.0.2
          ports:
            - containerPort: 8080
