apps/dssp-jtest-1/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dssp-jtest-1
  namespace: dev
  labels:
    backstage.io/kubernetes-id: dssp-jtest-1
spec:
  selector:
    app: dssp-jtest-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
